fixed overflow issue on grid class

--- a/sass/helpers/_grid.scss
+++ b/sass/helpers/_grid.scss
@@ -4,6 +4,7 @@
 	max-width: 980px;
 	margin: 0 auto;
 	@include clearfix();
+	overflow: initial;
 	.col {
 		float: left;
 		box-sizing: border-box;
