--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   margin: 0 auto;
   overflow: hidden;
   *zoom: 1;
+  overflow: initial;
 }
 .inner-grid .col {
   float: left;
